[workspace]
members = ["src/*", "examples/src/*"]
resolver = "2"

[workspace.dependencies]
ic-cdk = "^0.13.1"
candid = "^0.10.5"
serde = { version = "^1.0.108", features = ["derive"] }
serde_json = "^1.0.114"
mime = "^0.3.17"
validator = { version = "^0.17", features = ["derive"] }
serde-aux = "^4.5.0"
serde_bytes = "^0.11.14"
ructe = { version = "^0.17.0", features = ["mime03"] }
matchit = "^0.8.0"
dyn-clone = "^1.0.17"
tokio.workspace = { version = "^1.36.0", features = ["full"] }