[package]
name = "pluto"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = "0.9.3"
serde = { version = "1.0.183", features = ["derive"] }
serde_bytes = "0.11.12"
matchit = "0.7.2"
serde_json = "1.0.104"
dyn-clone = "1.0.11"