[package]
name = "pluto"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
library = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = "0.10.5"
serde = { version = "1.0.192", features = ["derive"] }
serde_bytes = "0.11.12"
matchit = "0.7.3"
serde_json = "1.0.108"
dyn-clone = "1.0.16"

[dev-dependencies]
tokio = { version = "1.34.0", features = ["full"] }
ic-cdk = "0.13.1"