[package]
name = "http_server_body_validation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.10.0"
ic-cdk-macros = "0.7.1"
serde_json = "1.0.104"
pluto = { path = "../../../src/pluto" }
serde = { version = "1.0.183", features = ["derive"] }
serde_bytes = "0.11.12"
validator = { version = "0.16", features = ["derive"] }
serde-aux = "4.2.0"
