[package]
name = "http_server_body_validation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = { workspace = true }
candid = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
validator = { workspace = true }
serde-aux = { workspace = true }
serde_bytes = { workspace = true }
ic-pluto = { path = "../../../src/pluto" }