[package]
name = "http_server_cors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.11.3"
candid = "0.9.6"
serde_json = "1.0.108"
pluto = { path = "../../../src/pluto" }
