[package]
name = "http_server_html_template"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[build-dependencies]
pluto_templating = { path = "../../../src/pluto_templating" }

[dependencies]
ic-cdk = "0.11.3"
candid = "0.9.6"
serde_json = "1.0.108"
pluto = { path = "../../../src/pluto" }
mime = "0.3.17"
