[package]
name = "http_server_html_template"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[build-dependencies]
ic-pluto-templating = { path = "../../../src/pluto_templating" }

[dependencies]
ic-cdk = { workspace = true }
candid = { workspace = true }
serde_json = { workspace = true }
mime = { workspace = true }
ic-pluto = { path = "../../../src/pluto" }
